--- a/src/main/res/layout/ac_web_auth.xml
+++ b/src/main/res/layout/ac_web_auth.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/rlWebViewContainer"
-    android:background="#080808">
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:id="@+id/rlWebViewContainer"
+                android:background="#080808">
 
 
     <WebView
@@ -13,7 +13,7 @@
 
     <ProgressBar
         android:id="@+id/prsWebLoading"
-        style="@android:style/Widget.ProgressBar.Small"
+        style="@style/TopFaceProgressBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
