--- a/src/main/res/layout/dialog_confirm_email.xml
+++ b/src/main/res/layout/dialog_confirm_email.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:visibility="gone"
-            style="@android:style/Widget.ProgressBar.Small"/>
+            style="@style/TopFaceProgressBar.Small"/>
     </RelativeLayout>
 
 </LinearLayout>
