--- a/src/main/res/layout/fragment_dating.xml
+++ b/src/main/res/layout/fragment_dating.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.topface.topface.ui.views.KeyboardListenerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/auth_bg">
+                                                     android:layout_width="fill_parent"
+                                                     android:layout_height="fill_parent"
+                                                     android:background="@drawable/auth_bg">
 
     <!-- Dating Album -->
     <com.topface.topface.ui.views.ImageSwitcher
         android:id="@+id/glrDatingAlbum"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/dating_footer" />
+        android:layout_above="@+id/dating_footer"/>
 
     <RelativeLayout
         android:id="@+id/ac_dating_container"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:scaleType="fitXY"
-            android:src="@drawable/dating_shadow" />
+            android:src="@drawable/dating_shadow"/>
 
         <include
             android:id="@+id/loDatingResources"
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="6dp"
-            android:layout_marginTop="6dp" />
+            android:layout_marginTop="6dp"/>
 
 
         <LinearLayout
@@ -46,14 +46,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:layout_marginLeft="6dp" />
+                android:layout_marginLeft="6dp"/>
 
             <include
                 android:id="@+id/vfDatingButtons"
                 layout="@layout/dating_buttons"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"/>
 
         </LinearLayout>
 
@@ -67,8 +67,7 @@
             android:drawablePadding="4dp"
             android:gravity="center_vertical"
             android:textSize="10sp"
-            android:visibility="gone" />
-
+            android:visibility="gone"/>
 
 
         <ImageButton
@@ -78,22 +77,22 @@
             android:layout_centerInParent="true"
             android:background="#0000"
             android:src="@drawable/btn_refresh_selector"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <com.topface.topface.ui.views.NoviceLayout
             android:id="@+id/loNovice"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:visibility="gone" />
+            android:visibility="gone"/>
     </RelativeLayout>
 
     <ProgressBar
         android:id="@+id/prsDatingLoading"
-        style="@android:style/Widget.ProgressBar.Small"
+        style="@style/TopFaceProgressBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <ViewFlipper
         android:id="@id/dating_footer"
@@ -106,13 +105,13 @@
             android:id="@+id/message_send"
             layout="@layout/chat_footer_send"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
         <include
             android:id="@+id/chat_buttons"
             layout="@layout/existing_chat_dating_footer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
     </ViewFlipper>
 </com.topface.topface.ui.views.KeyboardListenerLayout>
