--- a/src/main/res/layout/fragment_feed.xml
+++ b/src/main/res/layout/fragment_feed.xml
@@ -21,8 +21,7 @@
             android:id="@+id/tvBackgroundText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:indeterminateDrawable="@drawable/progress_medium_holo"/>
+            android:layout_centerInParent="true"/>
 
         <com.topface.PullToRefreshListView xmlns:p2r="http://schemas.android.com/apk/res-auto"
             android:id="@+id/lvFeedList"
@@ -40,9 +39,7 @@
 
         <com.topface.topface.ui.views.LockerView
             android:id="@+id/llvFeedLoading"
-            style="@style/LoadingLocker"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+            style="@style/LoadingLocker"/>
 
         <ViewStub
             android:id="@+id/stubForEmptyFeed"
