--- a/src/main/res/layout/fragment_view_users.xml
+++ b/src/main/res/layout/fragment_view_users.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ac_dating_container"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/auth_bg">
+                android:id="@+id/ac_dating_container"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="@drawable/auth_bg">
 
     <!-- Dating Album -->
     <com.topface.topface.ui.views.ImageSwitcher
         android:id="@+id/glrDatingAlbum"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"/>
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -19,12 +19,12 @@
         <ViewStub
             android:id="@+id/vsTopPanelContainer"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
         <ViewStub
             android:id="@+id/vsControls"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+            android:layout_height="fill_parent"/>
 
         <RelativeLayout
             android:id="@+id/loHelperContainer"
@@ -33,11 +33,11 @@
 
             <ProgressBar
                 android:id="@+id/prsDatingLoading"
-                style="@android:style/Widget.ProgressBar.Small"
+                style="@style/TopFaceProgressBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <ImageButton
                 android:id="@+id/btnUpdate"
@@ -46,7 +46,7 @@
                 android:layout_centerInParent="true"
                 android:background="#0000"
                 android:src="@drawable/btn_refresh_selector"
-                android:visibility="gone" />
+                android:visibility="gone"/>
         </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
