--- a/src/main/res/layout/item_grid_loader_retrier.xml
+++ b/src/main/res/layout/item_grid_loader_retrier.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/gift_frame"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"/>
 
     <TextView
         android:id="@+id/tvLoaderText"
@@ -15,14 +15,14 @@
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
         android:layout_centerInParent="true"
-        android:text="@string/general_dialog_retry" />
+        android:text="@string/general_dialog_retry"/>
 
     <ProgressBar
         android:id="@+id/prsLoader"
-        style="@android:style/Widget.ProgressBar.Small"
+        style="@style/TopFaceProgressBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 </RelativeLayout>
