--- a/src/main/res/layout/item_list_loader_retrier.xml
+++ b/src/main/res/layout/item_list_loader_retrier.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:minHeight="72dp">
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:minHeight="72dp">
 
     <TextView
         android:id="@+id/tvLoaderText"
@@ -10,14 +10,14 @@
         android:layout_height="fill_parent"
         android:textColor="#FFFFFF"
         android:layout_centerInParent="true"
-        android:text="@string/general_dialog_retry" />
+        android:text="@string/general_dialog_retry"/>
 
     <ProgressBar
         android:id="@+id/prsLoader"
-        style="@android:style/Widget.ProgressBar.Small"
+        style="@style/TopFaceProgressBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_centerInParent="true"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 </RelativeLayout>
