--- a/src/main/res/layout/promo_popup.xml
+++ b/src/main/res/layout/promo_popup.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/loInvitesPopup"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:id="@+id/loInvitesPopup"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-<RelativeLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
@@ -22,7 +22,7 @@
             android:textSize="14sp"
             android:textStyle="bold"
             android:text="@string/general_attention"
-            android:minHeight="50dp" />
+            android:minHeight="50dp"/>
 
         <TextView
             android:id="@+id/airMessagesText"
@@ -36,14 +36,14 @@
             android:paddingRight="2dp"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <View
             android:id="@+id/fakeView"
             android:layout_height="0dp"
             android:layout_width="0dp"
             android:layout_below="@+id/airMessagesText"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"/>
 
         <Button
             style="@style/Widget.Topface.Button.Big.Blue"
@@ -59,7 +59,7 @@
             android:padding="6dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textSize="14sp" />
+            android:textSize="14sp"/>
 
         <Button
             style="@style/Widget.Topface.Button.Big.Gray"
@@ -75,15 +75,13 @@
             android:padding="6dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textSize="14sp" />
+            android:textSize="14sp"/>
 
     </RelativeLayout>
 
     <com.topface.topface.ui.views.LockerView
         android:id="@+id/ipLocker"
         android:visibility="gone"
-        style="@style/LoadingLocker"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        style="@style/LoadingLocker"/>
 
 </RelativeLayout>
