--- a/src/main/res/layout/vip_item_edit_form_switch.xml
+++ b/src/main/res/layout/vip_item_edit_form_switch.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
 
     <TextView
         android:tag="tvTitle"
@@ -17,7 +17,7 @@
         android:drawablePadding="5dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:textSize="14sp" />
+        android:textSize="14sp"/>
 
     <!-- Switch -->
 
@@ -33,7 +33,7 @@
         android:layout_marginRight="10dp"
         android:clickable="false"
         android:textSize="12sp"
-        android:minHeight="0dp" />
+        android:minHeight="0dp"/>
 
     <ProgressBar
         android:tag="vsiLoadBar"
@@ -42,7 +42,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="34dp"
-        style="@android:style/Widget.ProgressBar.Small"
+        style="@style/TopFaceProgressBar.Small"
         android:visibility="visible"
         />
 
