--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -451,7 +451,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
         <item name="android:maxWidth">190dp</item>
     </style>
 
