--- a/src/main/res/menu/actions_chat.xml
+++ b/src/main/res/menu/actions_chat.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:tools="http://schemas.android.com/tools"
-      xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:appcompat="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <item
         android:id="@+id/action_profile"
         android:title="@string/profile_actions"
         appcompat:actionLayout="@layout/actionbar_item_profile"
         appcompat:showAsAction="always"
-        tools:ignore="AlwaysShowAction"/>
+        tools:ignore="AlwaysShowAction" />
     <item
         android:id="@+id/action_user_actions_list"
         android:icon="@drawable/user_profile_actions_button_selector"
+        android:orderInCategory="11111"
         android:title="@string/profile_actions"
-        tools:ignore="AlwaysShowAction"
-        appcompat:showAsAction="always"/>
+        appcompat:showAsAction="always"
+        tools:ignore="AlwaysShowAction">
+        <menu></menu>
+    </item>
+
 </menu>
