#34102: add submenu to actionbar item

--- a/src/main/res/menu/actions_user_profile.xml
+++ b/src/main/res/menu/actions_user_profile.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:appcompat="http://schemas.android.com/apk/res-auto">
+    xmlns:appcompat="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_user_actions_list"
         android:icon="@drawable/user_profile_actions_button_selector"
         android:title="@string/profile_actions"
-        appcompat:showAsAction="always"/>
+        appcompat:showAsAction="always">
+        <menu></menu>
+    </item>
 </menu>
