--- a/src/main/res/layout/banner_adwired.xml
+++ b/src/main/res/layout/banner_adwired.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ru.ideast.adwired.AWView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/adwireView"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" />
