--- a/src/main/res/layout/banner_topface.xml
+++ b/src/main/res/layout/banner_topface.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.topface.topface.ui.views.ImageViewRemote xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ivBanner"
+    android:id="@+id/tfBannerView"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:adjustViewBounds="true"
