--- a/src/main/res/layout/editor_banner_configurator.xml
+++ b/src/main/res/layout/editor_banner_configurator.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10dp"
-    android:padding="10dp"
-    android:background="@drawable/bg_dialog">
+    android:background="@drawable/bg_dialog"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/tvTitle"
@@ -18,7 +18,7 @@
         android:id="@+id/loSpinners"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <Spinner
             android:id="@+id/spEditFloatType"
