--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -3,6 +3,10 @@
 
     <!-- Базовая тема приложения -->
     <style name="Theme.Topface" parent="@style/Theme.AppCompat">
+        <!-- overflow menu settings -->
+        <item name="android:itemTextAppearance">@style/PopupMenuTextApearance</item>
+        <item name="android:dropDownListViewStyle">@style/PopupMenuListView</item>
+        <item name="android:popupMenuStyle" tools:ignore="NewApi">@style/PopupMenu</item>
         <!-- Тема индикаторов для ViewPager -->
         <item name="vpiIconPageIndicatorStyle">@style/Widget.TopfaceIconPageIndicator</item>
         <item name="vpiTabPageIndicatorStyle">@style/Widget.TopfaceTabPageIndicator</item>
