--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -383,6 +383,11 @@
         <item name="android:visibility">invisible</item>
     </style>
 
+    <style name="AdIndicator" parent="OnlineIndicator">
+        <item name="android:visibility">visible</item>
+        <item name="android:src">@drawable/ic_ad_flag</item>
+    </style>
+
     <style name="OnlineIndicatorStatic">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -426,6 +431,11 @@
         <item name="android:textColor">#B8B8B8</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="AdDescriptionText" parent="ListMessageText">
+        <item name="android:singleLine">false</item>
+        <item name="android:maxLines">3</item>
     </style>
 
     <style name="ListCity" parent="ShadowItemFont">
