--- a/src/main/res/layout/fragment_feed.xml
+++ b/src/main/res/layout/fragment_feed.xml
@@ -35,6 +35,7 @@
             p2r:ptrHeaderTextColor="#8A8A8A"
             p2r:ptrOverScroll="false"
             p2r:ptrShowIndicator="false"
+            p2r:ptrDrawable="@drawable/ic_p2r_loading"
             android:listSelector="@android:color/transparent" />
 
         <com.topface.topface.ui.views.LockerView
