- Fixes conflicting shows of tabbed and single banners in feeds

--- a/src/main/res/layout/banner.xml
+++ b/src/main/res/layout/banner.xml
@@ -6,6 +6,4 @@
     android:gravity="center"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="#1F1F1F">
-
-</LinearLayout>
+    android:background="#1F1F1F"/>
