--- a/src/main/res/values/editor.xml
+++ b/src/main/res/values/editor.xml
@@ -24,6 +24,7 @@
     <string name="editor_save_banners_settings">Сохранить в SharedPreferences</string>
     <string name="editor_reset_banners_settings">Сбросить к серверным</string>
     <string name="editor_on_start_banners_settings">Применять на старте</string>
+    <string name="editor_show_ads_flag">Показывать рекламу</string>
     <string name="editor_clear_air_messages">Сбросить флаг попапа "Сообщения за VIP"</string>
     <string name="editor_test_buy">Тестовые покупки</string>
     <string name="editor_network_errors_tip">вкл.(on) - добавляет уведомление в status bar\nвыкл.(off) - убирает уведомдение из status bar\nУведомление:\nEnable - включает ошибки запросов\nDisable - выключает ошибки запросов\nCancel - удаляет уведомление</string>
