--- a/src/main/res/layout/fragment_chat.xml
+++ b/src/main/res/layout/fragment_chat.xml
@@ -4,6 +4,12 @@
                                                      android:layout_width="fill_parent"
                                                      android:layout_height="fill_parent">
 
+    <ProgressBar
+        android:id="@+id/chat_loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
     <com.topface.PullToRefreshListView xmlns:p2r="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/lvChatList"
                                        android:layout_width="match_parent"
