--- a/src/main/res/layout/item_feed_layout_time.xml
+++ b/src/main/res/layout/item_feed_layout_time.xml
@@ -24,10 +24,7 @@
             android:orientation="horizontal">
 
             <include
-                android:id="@+id/ifp_name"
-                layout="@layout/item_feed_part_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                layout="@layout/item_feed_part_name"/>
 
             <include
                 android:id="@+id/ifp_time"
