#30565: add verification services

--- a/src/main/res/layout/fragment_settings.xml
+++ b/src/main/res/layout/fragment_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -13,103 +13,108 @@
             android:id="@+id/btnProfileEdit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:background="@drawable/edit_big_btn_selector"
             android:gravity="center_vertical"
-            android:textSize="14sp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="@string/settings_edit_profile"
-            android:layout_margin="8dp"/>
+            android:textSize="14sp" />
 
         <include
             android:id="@+id/loNotificationsHeader"
+            layout="@layout/item_edit_profile_form_header"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            layout="@layout/item_edit_profile_form_header"/>
+            android:layout_marginBottom="10dp" />
 
         <include
             android:id="@+id/loLikes"
+            layout="@layout/item_edit_form_notifier"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/item_edit_form_notifier"/>
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/loMutual"
+            layout="@layout/item_edit_form_notifier"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/item_edit_form_notifier"/>
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/loChat"
+            layout="@layout/item_edit_form_notifier"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/item_edit_form_notifier"/>
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/loGuests"
+            layout="@layout/item_edit_form_notifier"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            layout="@layout/item_edit_form_notifier"/>
+            android:layout_marginBottom="20dp" />
 
         <include
             android:id="@+id/loVibration"
+            layout="@layout/editor_form_switch"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/editor_form_switch"/>
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/loLED"
+            layout="@layout/editor_form_switch"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/editor_form_switch"/>
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/loMelody"
+            layout="@layout/item_edit_form_select"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            layout="@layout/item_edit_form_select"/>
-
-        <TextView
-            android:id="@+id/tvNoNotification"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:text="@string/general_no_notifications"
-            android:visibility="gone"/>
+            android:layout_marginBottom="20dp" />
 
         <include
+            android:id="@+id/tvNoNotification"
+            layout="@layout/services_manager_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <!--<TextView-->
+        <!--android:id="@+id/tvNoNotification"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:gravity="center"-->
+        <!--android:textSize="16sp"-->
+        <!--android:text="@string/general_no_notifications"-->
+        <!--android:visibility="gone"/>-->
+
+        <include
+            layout="@layout/item_divider"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_marginBottom="20dp"
-            layout="@layout/item_divider"/>
+            android:layout_marginBottom="20dp" />
 
         <include
             android:id="@+id/loAccount"
+            layout="@layout/item_edit_form_select"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/item_edit_form_select"/>
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/loHelp"
+            layout="@layout/item_edit_form_select"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/item_edit_form_select"/>
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/loLanguage"
+            layout="@layout/item_edit_form_select"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/item_edit_form_select"/>
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/loAbout"
+            layout="@layout/item_edit_form_select"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            layout="@layout/item_edit_form_select"/>
+            android:layout_marginBottom="8dp" />
     </LinearLayout>
 </ScrollView>
