--- a/src/main/res/values/constants.xml
+++ b/src/main/res/values/constants.xml
@@ -33,4 +33,8 @@
 
     <string name="notification_message_format">%1$s &#160;%2$s</string>
     <string name="app_id">642883445728173</string>
+
+    <!-- delay for showing popup about problems with notification services -->
+    <integer name="notifications_disable_popup_delay">72</integer>
+
 </resources>
