--- a/src/main/res/layout/fragment_feed.xml
+++ b/src/main/res/layout/fragment_feed.xml
@@ -27,18 +27,19 @@
             android:maxLines="1" />
 
         <com.topface.PullToRefreshListView xmlns:p2r="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/lvFeedList"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:cacheColorHint="#00000000"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
-            android:fadeScrollbars="true"
-            android:fadingEdge="none"
-            p2r:ptrOverScroll="false"
-            p2r:ptrShowIndicator="false"
-            p2r:ptrDrawable="@drawable/ic_p2r_loading"
-            android:listSelector="@android:color/transparent" />
+                       android:id="@+id/lvFeedList"
+                       android:layout_width="fill_parent"
+                       android:layout_height="fill_parent"
+                       android:cacheColorHint="#00000000"
+                       android:divider="@android:color/transparent"
+                       android:dividerHeight="0dp"
+                       android:fadeScrollbars="true"
+                       android:fadingEdge="none"
+                       p2r:ptrOverScroll="false"
+                       p2r:ptrShowIndicator="false"
+                       p2r:ptrDrawable="@drawable/spinner_16_inner_holo"
+                       p2r:ptrHideTextInVerticalMode="true"
+                       android:listSelector="@android:color/transparent"/>
 
         <com.topface.topface.ui.views.LockerView
             android:id="@+id/llvFeedLoading"
