--- a/src/main/res/layout/fragment_feed.xml
+++ b/src/main/res/layout/fragment_feed.xml
@@ -30,7 +30,8 @@
                                            p2r:ptrHeaderTextColor="#8A8A8A"
                                            p2r:ptrOverScroll="false"
                                            p2r:ptrShowIndicator="false"
-                                           p2r:ptrDrawable="@drawable/ic_p2r_loading"
+                                           p2r:ptrDrawable="@drawable/spinner_16_inner_holo"
+                                           p2r:ptrHideTextInVerticalMode="true"
                                            android:listSelector="@android:color/transparent"/>
 
         <com.topface.topface.ui.views.LockerView
