--- a/src/main/res/layout/city_search_drop_down_view.xml
+++ b/src/main/res/layout/city_search_drop_down_view.xml
@@ -15,9 +15,9 @@
         android:paddingTop="5dp"
         android:visibility="gone" />
 
-    <include
-        layout="@layout/spinner_text_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/citySearchText"
+        style="@style/SpinnerDropDownView"
+        android:textSize="16sp" />
 
 </LinearLayout>
