--- a/src/main/res/layout/spinner_text_layout.xml
+++ b/src/main/res/layout/spinner_text_layout.xml
@@ -1,7 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/SpinnerTextView"
-    android:background="@drawable/spinner_selector"
-    android:paddingBottom="15dp"
-    android:paddingLeft="8dp"
-    android:paddingTop="15dp" />
+<TextView style="@style/SpinnerDropDownView" />
