--- a/src/main/res/values/constants.xml
+++ b/src/main/res/values/constants.xml
@@ -33,4 +33,9 @@
 
     <string name="notification_message_format">%1$s &#160;%2$s</string>
     <string name="app_id">642883445728173</string>
+
+    <!-- messages of ssl exception -->
+    <string-array name="ssl_handshake_exception_messages">
+        <item>"could not validate certificate"</item>
+    </string-array>
 </resources>
