--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -302,20 +302,14 @@
         <item name="android:textStyle">normal</item>
     </style>
     
-    <style name="AdIndicator" parent="OnlineIndicator">
+    <style name="AdIndicator">
         <item name="android:visibility">visible</item>
         <item name="android:src">@drawable/ic_ad_flag</item>
-    </style>
-
-    <style name="OnlineIndicatorStatic">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_alignParentTop">true</item>
-        <item name="android:layout_marginTop">0dp</item>
         <item name="android:layout_marginRight">6dp</item>
-        <item name="android:src">@drawable/im_list_online_pressed</item>
-        <item name="android:visibility">invisible</item>
     </style>
 
     <style name="ListItemEmptyText.Bold">
