--- a/src/main/res/layout/item_feed_ad.xml
+++ b/src/main/res/layout/item_feed_ad.xml
@@ -18,14 +18,16 @@
 
         <TextView
             android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             style="@style/ListName"
-            android:textColor="#CFEDFF"
             android:layout_marginRight="20dp" />
 
         <TextView
             android:id="@+id/tvDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             style="@style/AdDescriptionText"
-            android:textColor="#CFEDFF"
             android:gravity="left|center_vertical"
             android:layout_below="@id/tvTitle"
             android:layout_marginRight="6dp" />
