--- a/src/main/res/layout/fragment_editor_banners.xml
+++ b/src/main/res/layout/fragment_editor_banners.xml
@@ -32,7 +32,7 @@
         <LinearLayout
             android:id="@+id/loBannersConfigurationsContainer"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="12dp" />
 
