--- a/src/main/res/layout/fragment_settings.xml
+++ b/src/main/res/layout/fragment_settings.xml
@@ -29,6 +29,13 @@
             android:layout_marginBottom="10dp" />
 
         <include
+            android:id="@+id/tvNoNotification"
+            layout="@layout/services_manager_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"/>
+
+        <include
             android:id="@+id/loLikes"
             layout="@layout/item_edit_form_notifier"
             android:layout_width="fill_parent"
@@ -78,12 +85,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp" />
-
-        <include
-            android:id="@+id/tvNoNotification"
-            layout="@layout/services_manager_layout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
 
         <include
             layout="@layout/item_divider"
